# agentglass

./: .gitignore  CONTRIBUTING.md  PULL_REQUEST_GUIDELINES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: mock_agent.py
src/agentglass/: __init__.py
src/agentglass/api/: server.py
src/agentglass/api/static/: index.html
src/agentglass/core/: serialization.py  store.py  tracer.py
src/agentglass/graph/: graph_extract.py
tests/: test_graph_extract.py  test_serialization.py  test_store.py  test_tracer.py
