[project]
name = "agentglass"
version = "0.1.0"
description = "Tracing and graph extraction for agents"
readme = "README.md"
authors = [
    { name = "Subhranil Sarkar", email = "subhranil2605@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langgraph>=1.1.9",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]

[project.scripts]
agentglass = "agentglass:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
